# talk-db

./: .env  .gitignore  Cargo.toml  README.md  data1.db  sqlx-data.json
src/: anne_will.rs  compute.rs  hart_aber_fair.rs  init.sql  insert_gast.sql  insert_gastsendung.sql  insert_sendungen.sql  main.rs  maischberger.rs  markus_lanz.rs  maybrit_illner.rs  person.rs  select_gast.sql  select_url.sql  zdf.rs
