[package]
name = "talk-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
scraper = "*"
sqlx = { version = "*", features = ["runtime-async-std-native-tls", "chrono", "macros", "sqlite", "offline"]}
chrono = "*"
tokio = { version = "*", features = ["full"] }
lazy_static = "1.4.0"
regex = "1"
